Fix a bug where the 'gap' aka ellipses is vertically centered in paging controls

--- a/agnostic-css/src/components/pagination/pagination.css
+++ b/agnostic-css/src/components/pagination/pagination.css
@@ -75,6 +75,11 @@
   background-color: var(--agnostic-gray-extra-light);
 }
 
+/* For ellipses like [1][2]...[3][4] */
+.pagination-item-gap {
+  transform: translateY(var(--fluid-6));
+}
+
 .pagination-center {
   justify-content: center;
 }
